--- a/public/css/adminstyle.css
+++ b/public/css/adminstyle.css
@@ -483,7 +483,7 @@ h2 {
 
 .pagination {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   width: 100%; /* Ensure it takes the full width */
   padding: 10px 0; /* Add padding for a balanced layout */
 }
@@ -679,6 +679,7 @@ h2 {
 }
 
 .sidebar {
+  width: 100%;
   margin-top: 100px;
   width: 350px;
   background-color: #F4E4DE;
@@ -688,7 +689,7 @@ h2 {
 
 .main-content {
   margin-top: 150px;
-  width: 100%;
+  width: 100vw;
   flex-grow: 1;
   padding: 20px;
   background-color: #ffffff;
