--- a/public/css/userdropdown.css
+++ b/public/css/userdropdown.css
@@ -37,6 +37,10 @@
     pointer-events: none; /* Disable pointer events by default */
 }
   
+.user-dropdown-button:hover {
+    background-color: #f7c9cb; /* Optional hover effect for button */
+  }
+  
 .user-dropdown-content.show {
     opacity: 1;
     transform: translateY(0); /* Slide down */
